@@ -89,6 +89,8 @@ if $PKG_CONFIG --atleast-version=2.12 gtk+-2.0; then
    have_gtk_2_12="yes"
    AC_DEFINE([HAVE_ENTRY_COMPLETION_INLINE_SELECTION],[1],
              [Defined if gtk_entry_completion_set_inline_selection () exists])
+   AC_DEFINE([HAVE_GDK_THREADS_ADD_API],[1],
+             [Defined if gtk_threads_add_* () exists])
 else
    have_gtk_2_12="no"
 fi
