@@ -10,6 +10,7 @@
  */
 
 #include "dbus.h"
+#include "compat.h"
 
 #include <glib/gi18n.h>
 #include <gtk/gtk.h>
